# CSC621ImageAnalysis

src/: CMakeLists.txt  Registration.cxx  Registration3d.cxx  WatershedSegmentation1.cxx
src/SegmentationResults/: abdominalResult.mhd  abdominalResult3.mhd
